--- a/Site/HTML/errado1.html
+++ b/Site/HTML/errado1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Certa Resposta!</h1>
+        <h1>Errada Resposta!</h1>
         <p>Insira aqui a explicação da resposta</p>
     </div>
 </body>
