--- a/Site/HTML/pergunta1.html
+++ b/Site/HTML/pergunta1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <title>Jogo de Perguntas e Respostas</title>
+    <link rel="stylesheet" href="/Site/CSS/style.css">
+    <title>Programandos</title>
 </head>
 <body>
 
