--- a/Site/HTML/certo1.html
+++ b/Site/HTML/certo1.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Site/CSS/certo.css">
+    <link rel="stylesheet" href="/Site/CSS/resposta.css">
+    <link rel="stylesheet" href="/Site/CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
     <div class="container">
         <h1>Certa Resposta!</h1>
-        <p>Insira aqui a explicação da resposta</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Cumque eum atque impedit, omnis, rerum, repudiandae 
+            molestiae aspernatur laboriosam provident nulla assumenda 
+            incidunt soluta totam ratione autem repellat vitae. Similique, qui.</p>
+        <br>
+         <div class="opcoes">
+            <div class="opcao">
+                <div>
+                    <button class="botaoResposta" class="col-6">Voltar</button>
+                </div>
+                <div>
+                    <button class="botaoResposta" class="col-6">Próximo</button>
+                </div>
+            </div> 
+        </div>
     </div>
 </body>
 </html>
