--- a/Site/HTML/pergunta1.html
+++ b/Site/HTML/pergunta1.html
@@ -9,32 +9,32 @@
 <body>
 
     <div class="container">
-        <h1>Insira a UC aqui!</h1>
+        <h1>Automação Industrial</h1>
 
         <div class="containerProgresso">
             <div class="progressoBar"></div>
         </div>
 
         <div class="pergunta">
-            <p>Insira a pergunta aqui!</p>
+            <p>Qual dispositivo é frequentemente usado para controlar processos automatizados?</p>
         </div>
 
         <div class="opcoes">
             <div class="opcao">
-                <button class="col-1">A</button>
-                <button class="col-10">Insira a resposta aqui!</button>
+                <div class="caixa" class="col-1">A</div>
+                <a href="/Site/HTML/errado1.html"><button class="botao">Monitor</button></a>
             </div>
             <div class="opcao">
-                <button class="col-1">B</button>
-                <button class="col-10">Insira a resposta aqui!</button>
+                <div class="caixa" class="col-1">B</div>
+                <a href="/Site/HTML/certo1.html"><button class="botao">CLP</button></a>
             </div>
             <div class="opcao">
-                <button class="col-1">C</button>
-                <button class="col-10">Insira a resposta aqui!</button>
+                <div class="caixa" class="col-1">C</div>
+                <a href="/Site/HTML/errado1.html"><button class="botao">Impressora</button></a>
             </div>
             <div class="opcao">
-                <button class="col-1">D</button>
-                <button class="col-10">Insira a resposta aqui!</button>
+                <div class="caixa" class="col-1">D</div>
+                <a href="/Site/HTML/errado1.html"><button class="botao">Scanner</button></a>
             </div>
         </div>
     </div>
