--- a/Site/HTML/pergunta2/certo2.html
+++ b/Site/HTML/pergunta2/certo2.html
@@ -18,10 +18,10 @@
          <div class="opcoes">
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta1/pergunta1.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <button class="botaoResposta" class="col-6">Voltar</button>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta2/pergunta2.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <button class="botaoResposta" class="col-6">Próximo</button>
                 </div>
             </div> 
         </div>
