--- a/Site/HTML/pergunta2/pergunta2.html
+++ b/Site/HTML/pergunta2/pergunta2.html
@@ -9,32 +9,32 @@
 <body>
 
     <div class="container">
-        <h1>Automação Industrial</h1>
+        <h1>Engenharia de Software</h1>
 
         <div class="containerProgresso">
             <div class="progressoBar"></div>
         </div>
 
         <div class="pergunta">
-            <p>Qual dispositivo é frequentemente usado para controlar processos automatizados?</p>
+            <p>Qual é a primeira fase do ciclo de vida de desenvolvimento de software?</p>
         </div>
 
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta1/errado1.html"><button class="botao">Monitor</button></a>
+                <a href="/Site/HTML/errado2.html"><button class="botao">Manutenção</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta1/certo1.html"><button class="botao">CLP</button></a>
+                <a href="/Site/HTML/errado2.html"><button class="botao">Testes</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta1/errado1.html"><button class="botao">Impressora</button></a>
+                <a href="/Site/HTML/certo2.html"><button class="botao">Análise de requisitos</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta1/errado1.html"><button class="botao">Scanner</button></a>
+                <a href="/Site/HTML/errado2.html"><button class="botao">Implementação</button></a>
             </div>
         </div>
     </div>
