--- a/Site/HTML/pergunta2/pergunta2.html
+++ b/Site/HTML/pergunta2/pergunta2.html
@@ -9,32 +9,32 @@
 <body>
 
     <div class="container">
-        <h1>Engenharia de Software</h1>
+        <h1>2- Automação Industrial</h1>
 
         <div class="containerProgresso">
             <div class="progressoBar"></div>
         </div>
 
         <div class="pergunta">
-            <p>Qual é a primeira fase do ciclo de vida de desenvolvimento de software?</p>
+            <p>pergunta</p>
         </div>
 
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/errado2.html"><button class="botao">Manutenção</button></a>
+                <a href="/Site/HTML/pergunta2/errado2.html"><button class="botao">errado</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/errado2.html"><button class="botao">Testes</button></a>
+                <a href="/Site/HTML/pergunta2/certo2.html"><button class="botao">certo</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/certo2.html"><button class="botao">Análise de requisitos</button></a>
+                <a href="/Site/HTML/pergunta2/errado2.html"><button class="botao">errado</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/errado2.html"><button class="botao">Implementação</button></a>
+                <a href="/Site/HTML/pergunta2/errado2.html"><button class="botao">errado</button></a>
             </div>
         </div>
     </div>
