--- a/Site/HTML/pergunta1/errado1C.html
+++ b/Site/HTML/pergunta1/errado1C.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Certa Resposta!</h1>
-        <p>O CLP é essencial em processos de automação, programado para controlar máquinas e processos industriais.
-             Ele recebe dados de entrada e executa ações baseadas nesses dados, como ligar motores ou ajustar válvulas.</p>
+        <h1>Errada Resposta!</h1>
+
+        <p>Um scanner digitaliza documentos ou imagens, e embora possa ser parte de sistemas de automação de escritório,
+             não tem função em automação industrial para controle de processos.</p>
         <br>
-         <div class="opcoes">
+        <div class="opcoes"></div>
             <div class="opcao">
                 <div>
                     <a href="/Site/HTML/pergunta1/pergunta1.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
@@ -24,5 +25,6 @@
             </div> 
         </div>
     </div>
+    
 </body>
 </html>
