--- a/Site/HTML/pergunta10/errado10C.html
+++ b/Site/HTML/pergunta10/errado10C.html
@@ -11,22 +11,19 @@
     <div class="container">
         <h1>Errada Resposta!</h1>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Corporis earum quasi, vero quibusdam hic blanditiis ipsam. 
-            Inventore, error repellat. Voluptatibus veritatis nostrum 
-            saepe qui est corrupti iusto iste libero soluta.</p>
+        <p>Não há relação entre a ausência de um construtor e o código entrar em um loop infinito. 
+            O código se comporta normalmente com o construtor padrão.</p>
         <br>
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta2/pergunta2.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta10/pergunta10.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta11/pergunta11.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
     </div>
-    
 </body>
 </html>
