--- a/Site/HTML/pergunta11/certo11.html
+++ b/Site/HTML/pergunta11/certo11.html
@@ -10,16 +10,16 @@
 <body>
     <div class="container">
         <h1>Certa Resposta!</h1>
-        <p>O Scrum Master é o guardião do processo Scrum e trabalha para garantir que o time siga os princípios ágeis,
-             removendo impedimentos e facilitando a comunicação.</p>
+        <p>let é a forma moderna de declarar uma variável em JavaScript.
+             Ela permite que a variável seja limitada ao escopo de bloco.</p>
         <br>
          <div class="opcoes">
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta11/pergunta11.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta12/pergunta12.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
