--- a/Site/HTML/pergunta14/certo14.html
+++ b/Site/HTML/pergunta14/certo14.html
@@ -10,16 +10,13 @@
 <body>
     <div class="container">
         <h1>Certa Resposta!</h1>
-        <p>O Scrum Master é o guardião do processo Scrum e trabalha para garantir que o time siga os princípios ágeis,
-             removendo impedimentos e facilitando a comunicação.</p>
+        <p>O atributo href é usado em uma tag <a> para definir o endereço de destino de um link em HTML.
+             Ele especifica para onde o link deve levar o usuário.</p>
         <br>
          <div class="opcoes">
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
-                </div>
-                <div>
-                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta14/pergunta14.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
             </div> 
         </div>
