--- a/Site/HTML/pergunta2/pergunta2.html
+++ b/Site/HTML/pergunta2/pergunta2.html
@@ -16,25 +16,25 @@
         </div>
 
         <div class="pergunta">
-            <p>pergunta</p>
+            <p>Qual é a função de um atuador em um sistema de automação?</p>
         </div>
 
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta2/errado2.html"><button class="botao">errado</button></a>
+                <a href="/Site/HTML/pergunta2/errado2A.html"><button class="botao">Medir variáveis físicas</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta2/certo2.html"><button class="botao">certo</button></a>
+                <a href="/Site/HTML/pergunta2/certo2.html"><button class="botao">Converter energia elétrica em movimento mecânico </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta2/errado2.html"><button class="botao">errado</button></a>
+                <a href="/Site/HTML/pergunta2/errado2B.html"><button class="botao">Monitorar sinais de entrada</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta2/errado2.html"><button class="botao">errado</button></a>
+                <a href="/Site/HTML/pergunta2/errado2C.html"><button class="botao">Transmitir dados para um controlador</button></a>
             </div>
         </div>
     </div>
