--- a/Site/HTML/pergunta5/pergunta5.html
+++ b/Site/HTML/pergunta5/pergunta5.html
@@ -9,32 +9,32 @@
 <body>
 
     <div class="container">
-        <h1>1- Automação Industrial</h1>
+        <h1>5- Inteligência Artificial</h1>
 
         <div class="containerProgresso">
             <div class="progressoBar"></div>
         </div>
 
         <div class="pergunta">
-            <p>Qual dispositivo é frequentemente usado para controlar processos automatizados?</p>
+            <p>O que é um "algoritmo de aprendizado"?</p>
         </div>
 
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta1/errado1A.html"><button class="botao">Monitor</button></a>
+                <a href="/Site/HTML/pergunta5/errado5A.html"><button class="botao">Um conjunto de dados</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta1/certo1.html"><button class="botao">CLP</button></a>
+                <a href="/Site/HTML/pergunta5/certo5.html"><button class="botao">Um procedimento para resolver um problema </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta1/errado1B.html"><button class="botao">Impressora</button></a>
+                <a href="/Site/HTML/pergunta5/errado5B.html"><button class="botao">Uma aplicação de software</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta1/errado1C.html"><button class="botao">Scanner</button></a>
+                <a href="/Site/HTML/pergunta5/errado5C.html"><button class="botao">Uma máquina que processa dados</button></a>
             </div>
         </div>
     </div>
