--- a/Site/HTML/pergunta7/pergunta7.html
+++ b/Site/HTML/pergunta7/pergunta7.html
@@ -9,32 +9,32 @@
 <body>
 
     <div class="container">
-        <h1>1- Automação Industrial</h1>
+        <h1>7- Banco de Dados</h1>
 
         <div class="containerProgresso">
             <div class="progressoBar"></div>
         </div>
 
         <div class="pergunta">
-            <p>Qual dispositivo é frequentemente usado para controlar processos automatizados?</p>
+            <p>Qual comando SQL é usado para modificar os dados de uma tabela existente?</p>
         </div>
 
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta1/errado1A.html"><button class="botao">Monitor</button></a>
+                <a href="/Site/HTML/pergunta7/errado7A.html"><button class="botao"> DELETE</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta1/certo1.html"><button class="botao">CLP</button></a>
+                <a href="/Site/HTML/pergunta7/errado7B.html"><button class="botao">ALTER</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta1/errado1B.html"><button class="botao">Impressora</button></a>
+                <a href="/Site/HTML/pergunta7/errado7C.html"><button class="botao">INSERT</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta1/errado1C.html"><button class="botao">Scanner</button></a>
+                <a href="/Site/HTML/pergunta7/certo7.html"><button class="botao">UPDATE </button></a>
             </div>
         </div>
     </div>
