--- a/Site/HTML/pergunta8/pergunta8.html
+++ b/Site/HTML/pergunta8/pergunta8.html
@@ -9,32 +9,32 @@
 <body>
 
     <div class="container">
-        <h1>1- Automação Industrial</h1>
+        <h1>8- Banco de Dados</h1>
 
         <div class="containerProgresso">
             <div class="progressoBar"></div>
         </div>
 
         <div class="pergunta">
-            <p>Qual dispositivo é frequentemente usado para controlar processos automatizados?</p>
+            <p>No Scrum, quem é responsável por garantir que o time siga os princípios ágeis?</p>
         </div>
 
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta1/errado1A.html"><button class="botao">Monitor</button></a>
+                <a href="/Site/HTML/pergunta8/certo8.html"><button class="botao"> DROP</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta1/certo1.html"><button class="botao">CLP</button></a>
+                <a href="/Site/HTML/pergunta8/errado8A.html"><button class="botao">DELETE</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta1/errado1B.html"><button class="botao">Impressora</button></a>
+                <a href="/Site/HTML/pergunta8/errado8B.html"><button class="botao"> REMOVE</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta1/errado1C.html"><button class="botao">Scanner</button></a>
+                <a href="/Site/HTML/pergunta8/errado8C.html"><button class="botao">TRUNCATE</button></a>
             </div>
         </div>
     </div>
