--- a/Site/HTML/pergunta9/errado9A.html
+++ b/Site/HTML/pergunta9/errado9A.html
@@ -9,17 +9,18 @@
 </head>
 <body>
     <div class="container">
-        <h1>Certa Resposta!</h1>
-        <p>O Scrum Master é o guardião do processo Scrum e trabalha para garantir que o time siga os princípios ágeis,
-             removendo impedimentos e facilitando a comunicação.</p>
+        <h1>Errada Resposta!</h1>
+
+        <p>Java Variable Management não existe. A JVM é uma parte essencial da arquitetura Java 
+            e tem a ver com a execução de programas, não com variáveis.</p>
         <br>
-         <div class="opcoes">
+        <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta9/pergunta9.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta10/pergunta10.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
