--- a/Site/HTML/pergunta12/errado12C.html
+++ b/Site/HTML/pergunta12/errado12C.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Certa Resposta!</h1>
-        <p>O Scrum Master é o guardião do processo Scrum e trabalha para garantir que o time siga os princípios ágeis,
-             removendo impedimentos e facilitando a comunicação.</p>
+        <h1>Errada Resposta!</h1>
+
+        <p>msg() não existe em JavaScript para exibir mensagens. A função correta para isso é alert().</p>
         <br>
-         <div class="opcoes">
+        <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta12/pergunta12.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta13/pergunta13.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
