--- a/Site/HTML/pergunta12/pergunta12.html
+++ b/Site/HTML/pergunta12/pergunta12.html
@@ -9,32 +9,32 @@
 <body>
 
     <div class="container">
-        <h1>1- Automação Industrial</h1>
+        <h1>12- Front-end JavaScript</h1>
 
         <div class="containerProgresso">
             <div class="progressoBar"></div>
         </div>
 
         <div class="pergunta">
-            <p>Qual dispositivo é frequentemente usado para controlar processos automatizados?</p>
+            <p>Qual função é usada para exibir uma mensagem na caixa de alerta no navegador?</p>
         </div>
 
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta1/errado1A.html"><button class="botao">Monitor</button></a>
+                <a href="/Site/HTML/pergunta12/errado12A.html"><button class="botao">display()</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta1/certo1.html"><button class="botao">CLP</button></a>
+                <a href="/Site/HTML/pergunta12/certo12.html"><button class="botao">alert()</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta1/errado1B.html"><button class="botao">Impressora</button></a>
+                <a href="/Site/HTML/pergunta12/errado12B.html"><button class="botao">show()</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta1/errado1C.html"><button class="botao">Scanner</button></a>
+                <a href="/Site/HTML/pergunta12/errado12C.html"><button class="botao">msg()</button></a>
             </div>
         </div>
     </div>
