--- a/Site/HTML/pergunta13/certo13.html
+++ b/Site/HTML/pergunta13/certo13.html
@@ -10,16 +10,16 @@
 <body>
     <div class="container">
         <h1>Certa Resposta!</h1>
-        <p>O Scrum Master é o guardião do processo Scrum e trabalha para garantir que o time siga os princípios ágeis,
-             removendo impedimentos e facilitando a comunicação.</p>
+        <p>px (pixels) é a unidade de medida mais comum para definir o tamanho de fontes e outros elementos de design na web.
+             É amplamente usada por sua precisão em telas digitais.</p>
         <br>
          <div class="opcoes">
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta13/pergunta13.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta14/pergunta14.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
