--- a/Site/HTML/pergunta13/errado13B.html
+++ b/Site/HTML/pergunta13/errado13B.html
@@ -9,17 +9,18 @@
 </head>
 <body>
     <div class="container">
-        <h1>Certa Resposta!</h1>
-        <p>O Scrum Master é o guardião do processo Scrum e trabalha para garantir que o time siga os princípios ágeis,
-             removendo impedimentos e facilitando a comunicação.</p>
+        <h1>Errada Resposta!</h1>
+
+        <p>km (quilômetros) é uma unidade de medida física e
+             não faz sentido ser usada no design da web.</p>
         <br>
-         <div class="opcoes">
+        <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta13/pergunta13.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta14/pergunta14.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
