--- a/Site/HTML/pergunta2/errado2B.html
+++ b/Site/HTML/pergunta2/errado2B.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Certa Resposta!</h1>
-        <p>O atuador recebe sinais de controle e realiza ações físicas, como mover um braço robótico ou abrir uma válvula. 
-            Ele converte energia elétrica em movimento ou outra forma de ação mecânica.</p>
+        <h1>Errada Resposta!</h1>
+
+        <p>Monitorar sinais de entrada é uma tarefa do CLP ou dos sensores, que processam e interpretam os sinais, 
+            enquanto o atuador responde a esses sinais para executar ações.</p>
         <br>
-         <div class="opcoes">
+        <div class="opcoes"></div>
             <div class="opcao">
                 <div>
                     <a href="/Site/HTML/pergunta2/pergunta2.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
@@ -24,5 +25,6 @@
             </div> 
         </div>
     </div>
+    
 </body>
 </html>
