--- a/Site/HTML/pergunta3/errado3B.html
+++ b/Site/HTML/pergunta3/errado3B.html
@@ -9,20 +9,22 @@
 </head>
 <body>
     <div class="container">
-        <h1>Certa Resposta!</h1>
-        <p>O Scrum Master é o guardião do processo Scrum e trabalha para garantir que o time siga os princípios ágeis,
-             removendo impedimentos e facilitando a comunicação.</p>
+        <h1>Errada Resposta!</h1>
+
+        <p>O desenvolvedor é responsável por escrever e entregar o software,
+             mas não por garantir que o time siga as práticas ágeis.</p>
         <br>
-         <div class="opcoes">
+        <div class="opcoes"></div>
             <div class="opcao">
                 <div>
                     <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta3/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
     </div>
+    
 </body>
 </html>
