--- a/Site/HTML/pergunta3/pergunta3.html
+++ b/Site/HTML/pergunta3/pergunta3.html
@@ -16,25 +16,25 @@
         </div>
 
         <div class="pergunta">
-            <p>Qual é a primeira fase do ciclo de vida de desenvolvimento de software?</p>
+            <p>No Scrum, quem é responsável por garantir que o time siga os princípios ágeis?</p>
         </div>
 
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta3/errado3.html"><button class="botao">Manutenção</button></a>
+                <a href="/Site/HTML/pergunta3/errado3A.html"><button class="botao">Gerente de projeto</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta3/errado3.html"><button class="botao">Testes</button></a>
+                <a href="/Site/HTML/pergunta3/errado3B.html"><button class="botao">Desenvolvedor</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta3/certo3.html"><button class="botao">Análise de requisitos</button></a>
+                <a href="/Site/HTML/pergunta3/certo3.html"><button class="botao">Scrum Master</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta3/errado3.html"><button class="botao">Implementação</button></a>
+                <a href="/Site/HTML/pergunta3/errado3C.html"><button class="botao">Stakeholder</button></a>
             </div>
         </div>
     </div>
