--- a/Site/HTML/pergunta4/errado4B.html
+++ b/Site/HTML/pergunta4/errado4B.html
@@ -11,22 +11,19 @@
     <div class="container">
         <h1>Errada Resposta!</h1>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Corporis earum quasi, vero quibusdam hic blanditiis ipsam. 
-            Inventore, error repellat. Voluptatibus veritatis nostrum 
-            saepe qui est corrupti iusto iste libero soluta.</p>
+        <p>O ágil busca ser flexível e iterativo, com entregas incrementais e feedback rápido, ao contrário de métodos tradicionais, 
+            como o método de cascata, que impõem controle rígido sobre cada fase.</p>
         <br>
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta1/pergunta1.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta2/pergunta2.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta5/pergunta5.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
     </div>
-    
 </body>
 </html>
