--- a/Site/HTML/pergunta4/pergunta4.html
+++ b/Site/HTML/pergunta4/pergunta4.html
@@ -9,32 +9,32 @@
 <body>
 
     <div class="container">
-        <h1>1- Automação Industrial</h1>
+        <h1>4- Engenharia de Software</h1>
 
         <div class="containerProgresso">
             <div class="progressoBar"></div>
         </div>
 
         <div class="pergunta">
-            <p>Qual dispositivo é frequentemente usado para controlar processos automatizados?</p>
+            <p>Qual é a principal vantagem de usar um modelo ágil de desenvolvimento de software?</p>
         </div>
 
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta1/errado1A.html"><button class="botao">Monitor</button></a>
+                <a href="/Site/HTML/pergunta4/errado4A.html"><button class="botao">Detalhamento extensivo de requisitos</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta1/certo1.html"><button class="botao">CLP</button></a>
+                <a href="/Site/HTML/pergunta4/certo4.html"><button class="botao">Flexibilidade e adaptabilidade às mudanças </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta1/errado1B.html"><button class="botao">Impressora</button></a>
+                <a href="/Site/HTML/pergunta4/errado4B.html"><button class="botao">Controle rígido de cada fase do desenvolvimento</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta1/errado1C.html"><button class="botao">Scanner</button></a>
+                <a href="/Site/HTML/pergunta4/errado4C.html"><button class="botao">Forte dependência de documentação formal</button></a>
             </div>
         </div>
     </div>
