--- a/Site/HTML/pergunta5/certo5.html
+++ b/Site/HTML/pergunta5/certo5.html
@@ -10,16 +10,16 @@
 <body>
     <div class="container">
         <h1>Certa Resposta!</h1>
-        <p>O Scrum Master é o guardião do processo Scrum e trabalha para garantir que o time siga os princípios ágeis,
-             removendo impedimentos e facilitando a comunicação.</p>
+        <p>Um algoritmo de aprendizado é um conjunto de regras e processos que permitem ao sistema "aprender"
+             com os dados e melhorar sua capacidade de resolver problemas.</p>
         <br>
          <div class="opcoes">
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta5/pergunta5.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta6/pergunta6.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
