--- a/Site/HTML/pergunta7/errado7B.html
+++ b/Site/HTML/pergunta7/errado7B.html
@@ -9,17 +9,18 @@
 </head>
 <body>
     <div class="container">
-        <h1>Certa Resposta!</h1>
-        <p>O Scrum Master é o guardião do processo Scrum e trabalha para garantir que o time siga os princípios ágeis,
-             removendo impedimentos e facilitando a comunicação.</p>
+        <h1>Errada Resposta!</h1>
+
+        <p>O comando ALTER é usado para modificar a estrutura da tabela, como adicionar ou remover colunas, 
+            mas não modifica os dados contidos nela.</p>
         <br>
-         <div class="opcoes">
+        <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta7/pergunta7.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta8/pergunta8.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
