--- a/Site/HTML/pergunta8/certo8.html
+++ b/Site/HTML/pergunta8/certo8.html
@@ -10,16 +10,16 @@
 <body>
     <div class="container">
         <h1>Certa Resposta!</h1>
-        <p>O Scrum Master é o guardião do processo Scrum e trabalha para garantir que o time siga os princípios ágeis,
-             removendo impedimentos e facilitando a comunicação.</p>
+        <p>O comando DROP remove permanentemente uma tabela ou outro objeto de banco de dados. Uma vez executado, 
+            os dados e a estrutura da tabela são apagados e não podem ser recuperados.</p>
         <br>
          <div class="opcoes">
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta8/pergunta8.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta9/pergunta9.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
