--- a/Site/HTML/pergunta9/errado9B.html
+++ b/Site/HTML/pergunta9/errado9B.html
@@ -11,22 +11,19 @@
     <div class="container">
         <h1>Errada Resposta!</h1>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Corporis earum quasi, vero quibusdam hic blanditiis ipsam. 
-            Inventore, error repellat. Voluptatibus veritatis nostrum 
-            saepe qui est corrupti iusto iste libero soluta.</p>
+        <p>A Java Version Manager não faz parte da arquitetura Java.
+             Gerenciadores de versões são ferramentas externas para gerenciar versões, mas isso não define JVM.</p>
         <br>
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/Site/HTML/pergunta9/pergunta9.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta3/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/Site/HTML/pergunta10/pergunta10.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
     </div>
-    
 </body>
 </html>
