--- a/Site/HTML/pergunta11/pergunta11.html
+++ b/Site/HTML/pergunta11/pergunta11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Site/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta11/certo11.html"><button class="botao">let</button></a>
+                <a href="/HTML/pergunta11/certo11.html"><button class="botao">let</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta11/errado11B.html"><button class="botao">int</button></a>
+                <a href="/HTML/pergunta11/errado11B.html"><button class="botao">int</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta11/errado11B.html"><button class="botao">float</button></a>
+                <a href="/HTML/pergunta11/errado11B.html"><button class="botao">float</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta11/errado11C.html"><button class="botao">string</button></a>
+                <a href="/HTML/pergunta11/errado11C.html"><button class="botao">string</button></a>
             </div>
         </div>
     </div>
