--- a/Site/HTML/pergunta12/certo12.html
+++ b/Site/HTML/pergunta12/certo12.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Site/CSS/resposta.css">
-    <link rel="stylesheet" href="/Site/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/resposta.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -16,10 +16,10 @@
          <div class="opcoes">
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta12/pergunta12.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/HTML/pergunta12/pergunta12.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/Site/HTML/pergunta13/pergunta13.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/HTML/pergunta13/pergunta13.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
