--- a/Site/HTML/pergunta12/pergunta12.html
+++ b/Site/HTML/pergunta12/pergunta12.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Site/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta12/errado12A.html"><button class="botao">display()</button></a>
+                <a href="//HTML/pergunta12/errado12A.html"><button class="botao">display()</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta12/certo12.html"><button class="botao">alert()</button></a>
+                <a href="/HTML/pergunta12/certo12.html"><button class="botao">alert()</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta12/errado12B.html"><button class="botao">show()</button></a>
+                <a href="/HTML/pergunta12/errado12B.html"><button class="botao">show()</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta12/errado12C.html"><button class="botao">msg()</button></a>
+                <a href="/HTML/pergunta12/errado12C.html"><button class="botao">msg()</button></a>
             </div>
         </div>
     </div>
