--- a/Site/HTML/pergunta14/pergunta14.html
+++ b/Site/HTML/pergunta14/pergunta14.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Site/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta14/certo14.html"><button class="botao">href </button></a>
+                <a href="/HTML/pergunta14/certo14.html"><button class="botao">href </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta14/errado14A.html"><button class="botao">src</button></a>
+                <a href="/HTML/pergunta14/errado14A.html"><button class="botao">src</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta14/errado14B.html"><button class="botao">link</button></a>
+                <a href="/HTML/pergunta14/errado14B.html"><button class="botao">link</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta14/errado14C.html"><button class="botao">target</button></a>
+                <a href="/HTML/pergunta14/errado14C.html"><button class="botao">target</button></a>
             </div>
         </div>
     </div>
