--- a/Site/HTML/pergunta9/pergunta9.html
+++ b/Site/HTML/pergunta9/pergunta9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Site/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta9/errado9A.html"><button class="botao">Java Variable Management</button></a>
+                <a href="/HTML/pergunta9/errado9A.html"><button class="botao">Java Variable Management</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta9/certo9.html"><button class="botao">Java Virtual Machine</button></a>
+                <a href="/HTML/pergunta9/certo9.html"><button class="botao">Java Virtual Machine</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta9/errado9B.html"><button class="botao">Java Version Manager</button></a>
+                <a href="/HTML/pergunta9/errado9B.html"><button class="botao">Java Version Manager</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta9/errado9C.html"><button class="botao">Java Vendor Machine</button></a>
+                <a href="/HTML/pergunta9/errado9C.html"><button class="botao">Java Vendor Machine</button></a>
             </div>
         </div>
     </div>
