--- a/Site/HTML/pergunta10/pergunta10.html
+++ b/Site/HTML/pergunta10/pergunta10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Site/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta10/errado10A.html"><button class="botao">O código não compila</button></a>
+                <a href="/HTML/pergunta10/errado10A.html"><button class="botao">O código não compila</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta10/certo10.html"><button class="botao">O compilador cria um construtor padrão </button></a>
+                <a href="/HTML/pergunta10/certo10.html"><button class="botao">O compilador cria um construtor padrão </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta10/errado10B.html"><button class="botao">A classe não pode ser instanciada</button></a>
+                <a href="/HTML/pergunta10/errado10B.html"><button class="botao">A classe não pode ser instanciada</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta10/errado10C.html"><button class="botao">O código entra em loop infinito</button></a>
+                <a href="/HTML/pergunta10/errado10C.html"><button class="botao">O código entra em loop infinito</button></a>
             </div>
         </div>
     </div>
