--- a/Site/HTML/pergunta14/errado14C.html
+++ b/Site/HTML/pergunta14/errado14C.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Site/CSS/resposta.css">
-    <link rel="stylesheet" href="/Site/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/resposta.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="/Site/HTML/pergunta14/pergunta14.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/HTML/pergunta14/pergunta14.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
             </div> 
         </div>
