--- a/Site/HTML/pergunta2/pergunta2.html
+++ b/Site/HTML/pergunta2/pergunta2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Site/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta2/errado2A.html"><button class="botao">Medir variáveis físicas</button></a>
+                <a href="/HTML/pergunta2/errado2A.html"><button class="botao">Medir variáveis físicas</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta2/certo2.html"><button class="botao">Converter energia elétrica em movimento mecânico </button></a>
+                <a href="/HTML/pergunta2/certo2.html"><button class="botao">Converter energia elétrica em movimento mecânico </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta2/errado2B.html"><button class="botao">Monitorar sinais de entrada</button></a>
+                <a href="/HTML/pergunta2/errado2B.html"><button class="botao">Monitorar sinais de entrada</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta2/errado2C.html"><button class="botao">Transmitir dados para um controlador</button></a>
+                <a href="/HTML/pergunta2/errado2C.html"><button class="botao">Transmitir dados para um controlador</button></a>
             </div>
         </div>
     </div>
