--- a/Site/HTML/pergunta8/pergunta8.html
+++ b/Site/HTML/pergunta8/pergunta8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Site/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Programandos</title>
 </head>
 <body>
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="/Site/HTML/pergunta8/certo8.html"><button class="botao"> DROP</button></a>
+                <a href="/HTML/pergunta8/certo8.html"><button class="botao"> DROP</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="/Site/HTML/pergunta8/errado8A.html"><button class="botao">DELETE</button></a>
+                <a href="/HTML/pergunta8/errado8A.html"><button class="botao">DELETE</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="/Site/HTML/pergunta8/errado8B.html"><button class="botao"> REMOVE</button></a>
+                <a href="/HTML/pergunta8/errado8B.html"><button class="botao"> REMOVE</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="/Site/HTML/pergunta8/errado8C.html"><button class="botao">TRUNCATE</button></a>
+                <a href="/HTML/pergunta8/errado8C.html"><button class="botao">TRUNCATE</button></a>
             </div>
         </div>
     </div>
