Mudança no visual

--- a/Site/HTML/final/final.html
+++ b/Site/HTML/final/final.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Finalização</title>
-    <link rel="stylesheet" href="/CSS/inicioFinal.css">
+    <link rel="stylesheet" href="../../CSS/inicioFinal.css">
 </head>
 <body>
 
@@ -13,14 +13,6 @@
         <p>Agradecemos sua contribuição. Esperamos que tenha tido uma ótima experiência!</p>
 
         <a href="/HTML/inicio/inicio.html" class="botao">Voltar ao Início</a>
-
-        <br>
-
-        <div class="feedback">
-            <p>Nos diga o que achou:</p>
-            <textarea placeholder="Deixe seu feedback aqui..."></textarea>
-            <button class="botao">Enviar Feedback</button>
-        </div>
     </div>
 </body>
 </html>
